RESOLVED FIXED144023
[Mac][MediaSource] Crash when SourceBuffer::provideMediaData() is called re-entrantly.
https://bugs.webkit.org/show_bug.cgi?id=144023
Summary [Mac][MediaSource] Crash when SourceBuffer::provideMediaData() is called re-e...
Jer Noble
Reported 2015-04-21 17:27:26 PDT
[Mac][MediaSource] Crash when SourceBuffer::provideMediaData() is called re-entrantly.
Attachments
Patch (2.61 KB, patch)
2015-04-21 17:42 PDT, Jer Noble
no flags
Patch (4.48 KB, patch)
2015-04-22 17:06 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2015-04-21 17:29:15 PDT
Jer Noble
Comment 2 2015-04-21 17:42:24 PDT
WebKit Commit Bot
Comment 3 2015-04-21 22:11:48 PDT
Comment on attachment 251280 [details] Patch Clearing flags on attachment: 251280 Committed r183097: <http://trac.webkit.org/changeset/183097>
WebKit Commit Bot
Comment 4 2015-04-21 22:11:56 PDT
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 5 2015-04-22 15:22:44 PDT
Did not completely fix the crash; re-opening.
Jer Noble
Comment 6 2015-04-22 17:06:15 PDT
WebKit Commit Bot
Comment 7 2015-04-22 21:32:55 PDT
Comment on attachment 251388 [details] Patch Clearing flags on attachment: 251388 Committed r183167: <http://trac.webkit.org/changeset/183167>
WebKit Commit Bot
Comment 8 2015-04-22 21:32:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.